--- a/Pear/Controllers/Onboarding/Landing Screen/Landing Screen View Controller/LandingScreenViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Landing Screen/Landing Screen View Controller/LandingScreenViewController.storyboard
@@ -19,18 +19,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bP-dS-bgj">
-                                <rect key="frame" x="0.0" y="20" width="375" height="475"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="525"/>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="5aE-wz-PXH">
-                                <rect key="frame" x="160" y="498" width="55" height="37"/>
+                                <rect key="frame" x="160" y="548" width="55" height="37"/>
                                 <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="currentPageIndicatorTintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </pageControl>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BhD-Vv-GXK">
-                                <rect key="frame" x="20" y="597" width="335" height="50"/>
+                                <rect key="frame" x="20" y="647" width="335" height="0.0"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="4cn-a6-oKj"/>
+                                    <constraint firstAttribute="height" id="4cn-a6-oKj"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <state key="normal" title="Continue with Email">
@@ -38,7 +38,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s0e-kO-oji">
-                                <rect key="frame" x="20" y="535" width="335" height="50"/>
+                                <rect key="frame" x="20" y="585" width="335" height="50"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="7lR-gx-kMu"/>
@@ -49,7 +49,7 @@
                                 </state>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-icon-facebook" translatesAutoresizingMaskIntoConstraints="NO" id="NcB-e3-f4O">
-                                <rect key="frame" x="28" y="545" width="30" height="30"/>
+                                <rect key="frame" x="28" y="595" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="gT9-OV-EUr"/>
                                     <constraint firstAttribute="height" constant="30" id="x99-7O-eoF"/>
