--- a/Pear/Controllers/Profiles/ProfileDemographicsViewController.storyboard
+++ b/Pear/Controllers/Profiles/ProfileDemographicsViewController.storyboard
@@ -1,7 +1,59 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jYZ-sv-aGJ">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Profile Demographics View Controller-->
+        <scene sceneID="5xH-Ey-s8W">
+            <objects>
+                <viewController id="jYZ-sv-aGJ" customClass="ProfileDemographicsViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="E5v-Td-ezH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="loc-Zq-dfE">
+                                <rect key="frame" x="20" y="20" width="42" height="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lui-2C-c3n">
+                                <rect key="frame" x="0.0" y="51" width="375" height="139"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4UA-eu-G4P">
+                                        <rect key="frame" x="67" y="5" width="240" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Ccp-6J-Ez6"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="lui-2C-c3n" firstAttribute="top" secondItem="loc-Zq-dfE" secondAttribute="bottom" constant="10" id="J24-xI-eba"/>
+                            <constraint firstItem="loc-Zq-dfE" firstAttribute="leading" secondItem="9lh-v8-S22" secondAttribute="leading" constant="20" id="Kug-kp-etf"/>
+                            <constraint firstItem="9lh-v8-S22" firstAttribute="bottom" secondItem="lui-2C-c3n" secondAttribute="bottom" constant="10" id="SWf-1H-0uy"/>
+                            <constraint firstItem="9lh-v8-S22" firstAttribute="trailing" secondItem="lui-2C-c3n" secondAttribute="trailing" id="TMC-Xu-rkl"/>
+                            <constraint firstItem="lui-2C-c3n" firstAttribute="leading" secondItem="9lh-v8-S22" secondAttribute="leading" id="TRG-jx-aZQ"/>
+                            <constraint firstItem="loc-Zq-dfE" firstAttribute="top" secondItem="9lh-v8-S22" secondAttribute="top" constant="20" id="fNu-Go-Hxd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9lh-v8-S22"/>
+                    </view>
+                    <size key="freeformSize" width="375" height="100"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gBl-r5-bkY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="140" y="132.23388305847078"/>
+        </scene>
+    </scenes>
 </document>
