--- a/Pear/Controllers/Profiles/ProfileDemographicsViewController.storyboard
+++ b/Pear/Controllers/Profiles/ProfileDemographicsViewController.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jYZ-sv-aGJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jYZ-sv-aGJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,42 +13,71 @@
         <scene sceneID="5xH-Ey-s8W">
             <objects>
                 <viewController id="jYZ-sv-aGJ" customClass="ProfileDemographicsViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="E5v-Td-ezH">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qcT-pg-5dR"/>
+                        <viewControllerLayoutGuide type="bottom" id="6P1-tn-ZSs"/>
+                    </layoutGuides>
+                    <stackView key="view" opaque="NO" contentMode="scaleToFill" axis="vertical" id="c6a-HQ-6cq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="loc-Zq-dfE">
-                                <rect key="frame" x="20" y="20" width="42" height="20"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lui-2C-c3n">
-                                <rect key="frame" x="0.0" y="51" width="375" height="139"/>
+                            <view contentMode="scaleToFill" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="k8c-zi-aui">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4UA-eu-G4P">
-                                        <rect key="frame" x="67" y="5" width="240" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKJ-Fi-ar0">
+                                        <rect key="frame" x="8" y="4" width="359" height="42"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="Ccp-6J-Ez6"/>
+                                    <constraint firstAttribute="trailing" secondItem="PKJ-Fi-ar0" secondAttribute="trailing" constant="8" id="0Sq-Uh-4E2"/>
+                                    <constraint firstAttribute="bottom" secondItem="PKJ-Fi-ar0" secondAttribute="bottom" constant="4" id="KJu-6h-4rh"/>
+                                    <constraint firstItem="PKJ-Fi-ar0" firstAttribute="leading" secondItem="k8c-zi-aui" secondAttribute="leading" constant="8" id="hcE-fl-FDG"/>
+                                    <constraint firstItem="PKJ-Fi-ar0" firstAttribute="top" secondItem="k8c-zi-aui" secondAttribute="top" constant="4" id="t0X-ZS-rN8"/>
+                                </constraints>
+                            </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1OV-ap-Hxt">
+                                <rect key="frame" x="0.0" y="50" width="375" height="50"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="zXz-pl-NMJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="50"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vex-cP-0E9">
+                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="50"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" id="5gL-yi-wPI"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="DWg-bs-hkF"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="zXz-pl-NMJ" secondAttribute="trailing" id="58e-kJ-4L1"/>
+                                    <constraint firstAttribute="height" secondItem="zXz-pl-NMJ" secondAttribute="height" id="7gY-ep-c08"/>
+                                    <constraint firstAttribute="bottom" secondItem="zXz-pl-NMJ" secondAttribute="bottom" id="AEE-Ph-Bka"/>
+                                    <constraint firstItem="zXz-pl-NMJ" firstAttribute="top" secondItem="1OV-ap-Hxt" secondAttribute="top" id="IkH-h9-wNg"/>
+                                    <constraint firstItem="zXz-pl-NMJ" firstAttribute="leading" secondItem="1OV-ap-Hxt" secondAttribute="leading" id="Vk1-yb-uYS"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="lui-2C-c3n" firstAttribute="top" secondItem="loc-Zq-dfE" secondAttribute="bottom" constant="10" id="J24-xI-eba"/>
-                            <constraint firstItem="loc-Zq-dfE" firstAttribute="leading" secondItem="9lh-v8-S22" secondAttribute="leading" constant="20" id="Kug-kp-etf"/>
-                            <constraint firstItem="9lh-v8-S22" firstAttribute="bottom" secondItem="lui-2C-c3n" secondAttribute="bottom" constant="10" id="SWf-1H-0uy"/>
-                            <constraint firstItem="9lh-v8-S22" firstAttribute="trailing" secondItem="lui-2C-c3n" secondAttribute="trailing" id="TMC-Xu-rkl"/>
-                            <constraint firstItem="lui-2C-c3n" firstAttribute="leading" secondItem="9lh-v8-S22" secondAttribute="leading" id="TRG-jx-aZQ"/>
-                            <constraint firstItem="loc-Zq-dfE" firstAttribute="top" secondItem="9lh-v8-S22" secondAttribute="top" constant="20" id="fNu-Go-Hxd"/>
+                            <constraint firstItem="1OV-ap-Hxt" firstAttribute="top" secondItem="k8c-zi-aui" secondAttribute="bottom" id="82s-jH-GlN"/>
+                            <constraint firstItem="6P1-tn-ZSs" firstAttribute="top" secondItem="1OV-ap-Hxt" secondAttribute="bottom" id="YaI-Pg-GTF"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="9lh-v8-S22"/>
-                    </view>
+                    </stackView>
                     <size key="freeformSize" width="375" height="100"/>
+                    <connections>
+                        <outlet property="firstNameLabel" destination="PKJ-Fi-ar0" id="7jG-eK-fI4"/>
+                        <outlet property="stackView" destination="zXz-pl-NMJ" id="kHA-VK-J5e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gBl-r5-bkY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
