--- a/Pear/Controllers/Profiles/Full Profile View/FullProfileScrollingViewController.storyboard
+++ b/Pear/Controllers/Profiles/Full Profile View/FullProfileScrollingViewController.storyboard
@@ -20,6 +20,7 @@
                     <scrollView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Aip-4k-p8c">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </scrollView>
                     <connections>
                         <outlet property="scrollView" destination="Aip-4k-p8c" id="lrg-uw-xd4"/>
